// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User List: Component should render correctly with loader 1`] = `
<styled.div>
  <MobileMenu
    active="userNavBtn"
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="user.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "userNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="user.userPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
        values={Object {}}
      />
    }
  >
    <PlusButton
      hideOnDesktop={false}
      id="addUserBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={true}
    noDataContent={null}
  >
    <UserList
      users={Array []}
    />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={true}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="userList.cancel"
        values={Object {}}
      />
    </BackButton>
    <PlusButton
      hideOnDesktop={false}
      id="addUserBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`User List: Component should render correctly with users data 1`] = `
<styled.div>
  <MobileMenu
    active="userNavBtn"
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="user.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "userNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="user.userPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="userList.headerSubtitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="userList.headerTitle"
        values={Object {}}
      />
    }
  >
    <PlusButton
      hideOnDesktop={false}
      id="addUserBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <UserList
      users={
        Array [
          Object {
            "firstName": "John",
            "lastName": "Doe",
          },
          Object {
            "firstName": "Alan",
            "lastName": "Watts",
          },
        ]
      }
    />
  </LoadingWrapper>
  <NavigationContainer
    contentStyles={null}
    fixed={true}
    hideOnDesktop={true}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="userList.cancel"
        values={Object {}}
      />
    </BackButton>
    <PlusButton
      hideOnDesktop={false}
      id="addUserBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
